fixed an incorrect typescript configuration and added react-test-renderer for testing-library

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "outDir": "./esm",
-    "declarations": true,
+    "moduleResolution": "node",
+    "declaration": true,
     "declarationDir": "./types",
     "importHelpers": true
   },
