--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-test-renderer": "^17.0.2",
     "react-testing-library": "^8.0.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.2",
